# systa

./: .gitignore  .renovaterc.json  CODEOWNERS  Cargo.toml  LICENSE  README.md
crates/systa-client/: Cargo.toml  README.md
crates/systa-schema/: Cargo.toml  README.md
crates/systa-server/: Cargo.toml  README.md
