[workspace]
resolver = "2"
members = [
  "crates/*"
]

[workspace.package]
version = "0.0.0"
description = ""
license = "MIT"
repository = "https://github.com/mogyugyu/systa"

[workspace.dependencies]
systa-schema = { path = "crates/systa-schema", version = "0.0.0"}
systa-server = { path = "crates/systa-server", version = "0.0.0" }
systa-client = { path = "crates/systa-client", version = "0.0.0" }

